--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,80 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: #000;
+}
+
+.lenght {
+  position: absolute;
+  color: #000;
+  background-color: #ffffff;
+  top: -13px;
+  right: -12px;
+  z-index: 1;
+  border-radius: 50%;
+  padding: 0.2rem;
+  font-size: 0.8rem;
+}
+
+.clamp-2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.clamp-1 {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.text-danger {
+  cursor: pointer;
+}
+
+.bg-dark {
+  cursor: pointer;
+}
+
+.fill {
+  cursor: pointer;
+}
+
+.bell {
+  cursor: pointer;
+}
+
+ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+li {
+  border: 2px solid #ffffff;
+  width: 40px;
+  height: 40px;
+  font-weight: 600;
+  margin: 0 10px;
+  border-radius: 6px;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+li.active {
+  font-weight: 900;
+  border-color: #ffc861;
+  color: #ffc861;
+}
+
+.hgt {
+  height: 100vh;
 }
